# Chess

./: CMakeLists.txt  Doxyfile  README.md
core/: CMakeLists.txt
core/src/: main.cpp  main.h  mainpage.dox
core/src/ChessComponents/: Bitboard.cpp  Bitboard.h  Components.cpp  Components.h  String.cpp  String.h  Turn.cpp  Turn.h
core/src/ChessLogic/: Board.cpp  Board.h  Evaluation.h
core/src/Core/: Engine.cpp  Engine.h  Logger.cpp  Logger.h
core/src/EntityComponentSystem/: EntityComponentSystem.h  entitycomponentsystem.dox
core/src/EntityComponentSystem/Allocators/: BlockAllocator.cpp
core/src/EntityComponentSystem/Components/: Transform.cpp  Transform.h
core/src/EntityComponentSystem/Core/: Entity.h  Registry.cpp  Registry.h
core/src/EntityComponentSystem/Storage/: ComponentPool.h  DenseContainer.cpp  DenseContainer.h  Storage.cpp  Storage.h
core/src/EntityComponentSystem/Types/: TypeUtils.h
core/src/Renderer/: DebugMessenger.cpp  DebugMessenger.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Renderer.cpp  Renderer.h
core/src/Window/: Window.cpp  Window.h
core/tests/BitboardTests/: CompileTests.cpp  RuntimeTests.cpp
docs-theme/: .htpasswd
docs/html/: __features_8hpp_source.html  __fixes_8hpp_source.html  __matrix__vectorize_8hpp_source.html  __mingw__dxhelper_8h_source.html  __noise_8hpp_source.html  __swizzle_8hpp_source.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp_source.html  _bitboard_8cpp_source.html  _bitboard_8h_source.html  _block_allocator_8cpp_source.html  _block_allocator_8h_source.html  _board_8cpp_source.html  _board_8h_source.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _components_8cpp_source.html  _components_8h_source.html  _debug_messenger_8cpp_source.html  _debug_messenger_8h_source.html  _engine_8cpp_source.html  _engine_8h_source.html  _entity.html  _entity_8cpp_source.html  _entity_8h_source.html  _entity_component_system_8h_source.html  _evaluation_8cpp_source.html  _evaluation_8h_source.html  _instance_8cpp_source.html  _instance_8h_source.html  _logger_8cpp_source.html  _logger_8h_source.html  _logical_device_8cpp_source.html  _logical_device_8h_source.html  _physical_device_8cpp_source.html  _physical_device_8h_source.html  _registry_8cpp_source.html  _registry_8h_source.html  (+628 more)
(+690 files in other folders)
